--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@aws-amplify/api": "^2.1.3",
     "@aws-amplify/pubsub": "^2.1.3",
+    "aws-amplify": "^2.2.2",
+    "aws-amplify-react-native": "^3.2.0",
     "expo": "~36.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
