--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "aws-amplify": "^2.2.2",
     "aws-amplify-react-native": "^3.2.0",
     "expo": "~36.0.0",
+    "expo-av": "^8.0.0",
+    "expo-permissions": "^8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
