--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-base64": "0.0.2",
+    "react-native-web": "~0.11.7",
+    "expo-asset": "~8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
